--- a/index.html
+++ b/index.html
@@ -2,14 +2,96 @@
 
 <html>
 <head>
-	<title>mgiulio's Landing Page</title>
+	<title>Pieces of Me - mgiulio's Landing Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" media="screen" type="text/css" href="landing-page/css/style.css">
+	<link rel="stylesheet" media="screen" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Hello World</h1>
-	<h2>Blah blah</h2>
-	<p>Just a test paragraph</p>
-	<p>Just a test paragraph</p>
+	<p id="about">Hi,<br>
+    I'm Giulio and here I pull together all my pieces of me spread
+    across the Net.
+   </p>
+	<div id="lifestream">&nbsp;</div>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.1.min.js"><\/script>');</script>
+	<script src="js/jquery.lifestream.min.js"></script>
+   <!--<script src="https://raw.github.com/rmm5t/jquery-timeago/master/jquery.timeago.js" type="text/javascript" charset="utf-8"></script>-->
+	<script>
+		(function(){
+			var count = 0,
+			list = [
+			  {
+				 service: 'delicious',
+				 user: 'mgiulio'
+			  },
+			  {
+				 service: 'deviantart',
+				 user: 'giuliom',
+			  },
+			  {
+				 service: 'flickr',
+				 user: '60378309@N02'
+			  },
+			  {
+				 service: 'github',
+				 user: 'mgiulio'
+			  },
+			  {
+				 service: 'twitter',
+				 user: 'mgiulio'
+			  },
+			  {
+				 service: 'wordpress',
+				 user: 'giuliom'
+			  },
+			  {
+				 service: 'youtube',
+				 user: 'giuliomainardi0'
+			  }
+			];
+
+			/*
+			Date.prototype.toISO8601 = function(date) {
+				 var pad = function (amount, width) {
+					  var padding = "";
+					  while (padding.length < width - 1 && amount < Math.pow(10, width - padding.length - 1))
+							padding += "0";
+					  return padding + amount.toString();
+				 }
+				 date = date ? date : new Date();
+				 var offset = date.getTimezoneOffset();
+				 return pad(date.getFullYear(), 4)
+					  + "-" + pad(date.getMonth() + 1, 2)
+					  + "-" + pad(date.getDate(), 2)
+					  + "T" + pad(date.getHours(), 2)
+					  + ":" + pad(date.getMinutes(), 2)
+					  + ":" + pad(date.getUTCSeconds(), 2)
+					  + (offset > 0 ? "-" : "+")
+					  + pad(Math.floor(Math.abs(offset) / 60), 2)
+					  + ":" + pad(Math.abs(offset) % 60, 2);
+			};
+			*/
+
+			$("#lifestream").lifestream({
+			  limit: 400,
+			  list: list,
+			  /*
+			  feedloaded: function(){
+				 count++;
+				 // Check if all the feeds have been loaded
+				 if( count === list.length ){
+					$("#lifestream li").each(function(){
+					  var element = $(this),
+							date = new Date(element.data("time"));
+					  element.append(' <abbr class="timeago" title="' + date.toISO8601(date) + '">' + date + "</abbr>");
+					})
+					$("#lifestream .timeago").timeago();
+				 }
+			  }
+			  */
+			});
+		})();
+	</script>
 </body>
 </html>
