Implement overlay bg opacity with two DIV's

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<li><a id="lifestream" href="#">Lifestream</a></li>
 	</ul>
 	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>-->
+	<script src="js/jquery-1.6.2.min.js"></script>
 	<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.1.min.js"><\/script>');</script>
 	<script src="js/jquery.lifestream.min.js"></script>
    <!--<script src="https://raw.github.com/rmm5t/jquery-timeago/master/jquery.timeago.js" type="text/javascript" charset="utf-8"></script>-->
