--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Pieces of Me - mgiulio's Landing Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" media="screen" type="text/css" href="css/style.css">
+	<link rel="stylesheet" media="screen" type="text/css" href="css/lifestream.css">
 </head>
 <body>
 	<p id="about">Hi,<br>
