Contact with scr.im

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    </p>
 	
 	<ul id="bar">
-		<li><a id="contact" href="#">Contact</a></li>
-		<li><a id="lifestream" href="#">Lifestream</a></li>
+		<li><a id="contact" href="http://scr.im/mgiulio" title="Drom me a line" target="blank">Contact</a></li>
+		<li><a id="lifestream" href="#" title="What I'm doing">Lifestream</a></li>
 	</ul>
 	
 	<script src="js/jquery-1.6.2.min.js"></script>
