Major rewrite for PE

--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
 	<link rel="stylesheet" media="screen" type="text/css" href="css/lifestream.css">
 </head>
 <body>
-	<p id="about">Hi,<br>
+	<p id="greeting">Hi,<br>
     I'm Giulio and here I pull together all my pieces of me spread
     across the Net.
    </p>
 	
-	<ul id="bar">
-		<li><a id="contact" href="http://scr.im/mgiulio" title="Drom me a line" target="blank">Contact</a></li>
-		<li><a id="lifestream" href="#" title="What I'm doing">Lifestream</a></li>
+	<ul id="navbar">
+		<li><a href="#about" title="Something about me">About</a></li>
+		<li><a href="#contact" title="Drom me a line">Contact</a></li>
+		<li><a href="#lifestream" title="My activity on the Net">Lifestream</a></li>
 	</ul>
+	
+	<div id="about" class="page">
+		<p>Something about me. Something about me. Something about me. Something about me.</p>
+		<p>Something about me. Something about me. Something about me. Something about me.</p>
+		<p>Something about me. Something about me. Something about me. Something about me.</p>
+		<p>Something about me. Something about me. Something about me. Something about me.</p>
+	</div>
+	
+	<div id="contact" class="page">
+		<p>Feel free to drop me a line to get in touch at <em>giulio.mainardiatgmail.com</em></p>
+	</div>
 	
 	<script src="js/jquery-1.6.2.min.js"></script>
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>-->
