Contact with scr.im and headings in pages

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	</ul>
 	
 	<div id="about" class="page">
+		<h2>About Me</h2>
 		<p>Something about me. Something about me. Something about me. Something about me.</p>
 		<p>Something about me. Something about me. Something about me. Something about me.</p>
 		<p>Something about me. Something about me. Something about me. Something about me.</p>
@@ -26,7 +27,8 @@
 	</div>
 	
 	<div id="contact" class="page">
-		<p>Feel free to drop me a line to get in touch at <em>giulio.mainardiatgmail.com</em></p>
+		<h2>Get in Touch</h2>
+		<p>Feel free to <a href="http://scr.im/mgiulio" target="blank">drop me a line</a>.</p>
 	</div>
 	
 	<script src="js/jquery-1.6.2.min.js"></script>
