Remove behind the scene page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<ul id="navbar">
 		<li><a href="#about" title="Something about me">About</a></li>
 		<li><a href="#contact" title="Drom me a line">Contact</a></li>
-		<li><a href="#behind-the-scenes" title="Discover something about the implementation of this site">Behind the Scenes</a></li>
 	</ul>
 	
 	<div id="about" class="page">
@@ -39,34 +38,13 @@
 					<li>HTML 5</li>
 				</ul>
 		</ul>
+		<h3>Location</h3>
+		<h3>Site tech notes</h3>
 	</div>
 	
 	<div id="contact" class="page">
 		<h2>Get in Touch</h2>
 		<p>Feel free to <a href="http://scr.im/mgiulio" target="blank">drop me a line</a>.</p>
-	</div>
-	
-	<div id="behind-the-scenes" class="page">
-		<h2>Behind the Scenes</h2>
-		<p><em style="font-family: monospace;">Warning: Entering Geeky Mode.</em>Some tech notes about the implementation of this site.</p>
-		<p>This site was inspired by landing pageslike ...</p>
-		<p>Here are a feature list:</p>
-		<ul>
-			<li><a href="#full-page-bg">Full page background CSS techniques</a></li>
-			<li><a href="#pe">Progressive Enhancement</a></li>
-			<li><a href="#ls">Life Stream</a></li>
-			<li><a href="#credits">Third Party resources</a></li>
-		</ul>
-		<h3 id="full-page-bg">Full page background CSS techniques</h3>
-		<p>Coyer</p>
-		<h3 id="pe">Progressive Enhancement</h3>
-		<h3 id="ls">Lifestream</h3>
-		<p>JLS</p>
-		<h3 id="credits">Third Party resources</h3>
-		<ul>
-			<li>bg pic</li>
-			<li>Js libs and plugins</li>
-		</ul>
 	</div>
 	
 	<script src="js/jquery-1.6.2.min.js"></script>
