--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<h2>About Me</h2>
 		<p>Welcome, thanks for stopping here.</p>
 		<p>Let me tell you something about me.</p>
+		<p>A word about my english.</p>
 		<p>
 			I am a full-stack web developer who loves to make stuff with Web Standards.
 			Generally my focus is on the client side with a particular emphasis on JavaScript
@@ -47,10 +48,10 @@
 		<p>Feel free to <a href="http://scr.im/mgiulio" target="blank">drop me a line</a>.</p>
 	</div>
 	
-	<script src="js/jquery-1.6.2.min.js"></script>
-	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>-->
+	<!--<script src="js/jquery-1.6.2.min.js"></script>-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<!--<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.1.min.js"><\/script>');</script>-->
-	<script src="js/jquery.lifestream.custom.min.js"></script>
+	<script src="js/jquery.lifestream.js"></script>
    <!--<script src="https://raw.github.com/rmm5t/jquery-timeago/master/jquery.timeago.js" type="text/javascript" charset="utf-8"></script>-->
 	<script src="js/script.js"></script>
 </body>
