Add WebDev and Gfx pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 	<ul id="navbar">
 		<li><a href="#about" title="Something about me">About</a></li>
+		<li><a href="#webdev" title="Come in the labs!">Web Development</a></li>
+		<li><a href="#gfx" title="Torturing pixels">Graphics</a></li>
 		<li><a href="#contact" title="Drom me a line">Contact</a></li>
 	</ul>
 	
@@ -18,6 +20,13 @@
 		<p>Welcome, thanks for stopping here.</p>
 		<p>Let me tell you something about me.</p>
 		<p>A word about my english.</p>
+		<h3>Location</h3>
+		<h3>Site tech notes</h3>
+	</div>
+	
+	<div id="webdev" class="page">
+		<h2>Web Development</h2>
+		<h3>Skills</h3>
 		<p>
 			I am a full-stack web developer who loves to make stuff with Web Standards.
 			Generally my focus is on the client side with a particular emphasis on JavaScript
@@ -34,8 +43,15 @@
 					<li>HTML 5</li>
 				</ul>
 		</ul>
-		<h3>Location</h3>
-		<h3>Site tech notes</h3>
+		<h3>Portfolio</h3>
+		<ul>
+			<li><a href="#">Mysite</a></li>
+			<li><a href="#">JLF</a></li>
+		</ul>
+	</div>
+	
+	<div id="gfx" class="page">
+		<h2>Graphics</h2>
 	</div>
 	
 	<div id="contact" class="page">
