Add some content and structure to the web development page

--- a/index.html
+++ b/index.html
@@ -19,31 +19,70 @@
 		<h2>About Me</h2>
 		<p>Welcome, thanks for stopping here.</p>
 		<p>Let me tell you something about me.</p>
-		<p>A word about my english.</p>
+		<p>A word about my (bad)english.</p>
 		<h3>Location</h3>
-		<h3>Site tech notes</h3>
 	</div>
 	
 	<div id="webdev" class="page">
 		<h2>Web Development</h2>
-		<h3>Skills</h3>
+		<cite class="quote">“Cmputers are useless.  They can only give you answers.”</cite>
+		
 		<p>
-			I am a full-stack web developer who loves to make stuff with Web Standards.
+			I am a full-stack all round all hats renaiisance wannabe web developer with a focus to programming who loves to make stuff with Web Standards.
 			Generally my focus is on the client side with a particular emphasis on JavaScript
 		</p>
+		
+		<p style="text-align:center;">
+			<a href="#skills">Skills</a>
+			<a href="#portfolio">Portfolio</a>, because a code snippet is worth 1e4 words
+		<p>
+		
+		<h3 id="skills">Skills</h3>
+		<h4>JavaScript</h4>
+		<p>Deep knowlogde of language.</p>
+		<p>Client side: native, libs: jQuery, YUI</p>
+		<p>Server side: NodeJs, YQL</p>
+		
+		<h4>CSS</h4>
+		<p>Css 2.1,CSS3</p>
+		
+		<h4>HTML</h4>
+		<p>HTML, HTML5</p>
+		
 		<ul>
-			<li>JavaScript</li>
-			<li>CSS
-				<ul>
-					<li>CSS3</li>
-				</ul>
+			<li>
+				Shells: Cygwin, unix cmds
 			</li>
-			<li>HTML
-				<ul>
-					<li>HTML 5</li>
-				</ul>
+			<li>
+				CVS: git, github
+			</li>
+			<li>
+				Wordpress
+			</li>
+			<li>
+				C/C++
+			</li>
+			<li>
+				Db: mysql
+			</li>
+			<li>
+				Web Servers: Apache
+			</li>
+			<li>
+				PHP
+			</li>
+			<li>
+				UML
+			</li>
+			<li>
+				Java
+			</li>
+			<li>
+				Paradigms: OO, functional
+			</li>
+			<li>Gfx sw</li>
 		</ul>
-		<h3>Portfolio</h3>
+		<h3 id="portfolio">Portfolio</h3>
 		<ul>
 			<li><a href="#">Mysite</a></li>
 			<li><a href="#">JLF</a></li>
