Cross browser opacity and rgba

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 	<title>Pieces of Me - mgiulio's Landing Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" media="screen" type="text/css" href="css/style.css">
+	<!--[if lt IE 9]>
+   <style type="text/css">
+		.color-block {
+			background:transparent;
+			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000050,endColorstr=#99000050);
+			zoom: 1;
+		} 
+   </style>
+	<![endif]-->
 	<link rel="stylesheet" media="screen" type="text/css" href="css/lifestream.css">
 </head>
 <body>
