Fix conditional comment for rgba support

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" media="screen" type="text/css" href="css/style.css">
 	<!--[if lt IE 9]>
    <style type="text/css">
-		.color-block {
-			background:transparent;
-			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000050,endColorstr=#99000050);
+		.page {
+			background: transparent;
+			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#00000050,endColorstr=#00000050);
 			zoom: 1;
 		} 
    </style>
