Add content to About page

--- a/index.html
+++ b/index.html
@@ -26,10 +26,27 @@
 	
 	<div id="about" class="page">
 		<h2>About Me</h2>
-		<p>Welcome, thanks for stopping here.</p>
-		<p>Let me tell you something about me.</p>
-		<p>A word about my (bad)english.</p>
+		<blockquote style="width: 20%; line-height: 1.25; font-size: 14px; text-align: left;">
+			"To study, and when the occasion arises to put what one has learned into 
+			practice - is that not deeply satisfying?"
+		</blockquote>
+		<cite>Confucius, Analects,1.1.1</cite>
+		<p></p>
+		<p>I like to improve myself.</p>
 		<h3>Location</h3>
+		<p>Currently I live in Petritoli.</p>
+		<iframe width="500" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=Petritoli&amp;sll=41.442726,12.392578&amp;sspn=13.068346,28.256836&amp;ie=UTF8&amp;hq=&amp;hnear=Petritoli+Fermo,+Marche&amp;t=h&amp;ll=43.058353,13.701668&amp;spn=0.062713,0.171318&amp;z=12&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.it/maps?f=q&amp;source=embed&amp;hl=it&amp;geocode=&amp;q=Petritoli&amp;sll=41.442726,12.392578&amp;sspn=13.068346,28.256836&amp;ie=UTF8&amp;hq=&amp;hnear=Petritoli+Fermo,+Marche&amp;t=h&amp;ll=43.058353,13.701668&amp;spn=0.062713,0.171318&amp;z=12&amp;iwloc=A" style="color:#0000FF;text-align:left">Visualizzazione ingrandita della mappa</a></small>
+		<h3><em style="color: #dd0000;">Warning:</em> Bad English Ahead</h3>
+		<p>
+			English is not my native language. I like to study languages(natural ones I mean, besides 
+			artificial ones) but, you know, there are only 24h in a day, so I am not able to find 
+			the necessary time to improve these skills. So if I write something that just don't make
+			sense, please remember this paragraph;)
+		</p>
+		<blockquote style="border-top: 1px dotted #dddddd; text-align:right;">
+			"Happines is when you win a race against yourself"
+		</blockquote>
+		<cite>"Vehicle dynamics - theory and applications", ...</cite>
 	</div>
 	
 	<div id="webdev" class="page">
