About page: content and style

--- a/index.html
+++ b/index.html
@@ -26,16 +26,29 @@
 	
 	<div id="about" class="page">
 		<h2>About Me</h2>
-		<blockquote style="width: 20%; line-height: 1.25; font-size: 14px; text-align: left;">
+		
+		<img 
+			id="my-avatar"
+			src="img/avatar.png" 
+			title="This is how you can usually see me on the Net" 
+			alt="My avatar">
+		
+		<blockquote class="top">
 			"To study, and when the occasion arises to put what one has learned into 
 			practice - is that not deeply satisfying?"
 		</blockquote>
 		<cite>Confucius, Analects,1.1.1</cite>
-		<p></p>
+		
+		<p style="clear: both;">
+			Hello, thanks for stopping here. Let me tell you something about me.
+		</p>
+		
 		<p>I like to improve myself.</p>
+		
 		<h3>Location</h3>
 		<p>Currently I live in Petritoli.</p>
 		<iframe width="500" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=Petritoli&amp;sll=41.442726,12.392578&amp;sspn=13.068346,28.256836&amp;ie=UTF8&amp;hq=&amp;hnear=Petritoli+Fermo,+Marche&amp;t=h&amp;ll=43.058353,13.701668&amp;spn=0.062713,0.171318&amp;z=12&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.it/maps?f=q&amp;source=embed&amp;hl=it&amp;geocode=&amp;q=Petritoli&amp;sll=41.442726,12.392578&amp;sspn=13.068346,28.256836&amp;ie=UTF8&amp;hq=&amp;hnear=Petritoli+Fermo,+Marche&amp;t=h&amp;ll=43.058353,13.701668&amp;spn=0.062713,0.171318&amp;z=12&amp;iwloc=A" style="color:#0000FF;text-align:left">Visualizzazione ingrandita della mappa</a></small>
+		
 		<h3><em style="color: #dd0000;">Warning:</em> Bad English Ahead</h3>
 		<p>
 			English is not my native language. I like to study languages(natural ones I mean, besides 
@@ -43,10 +56,11 @@
 			the necessary time to improve these skills. So if I write something that just don't make
 			sense, please remember this paragraph;)
 		</p>
-		<blockquote style="border-top: 1px dotted #dddddd; text-align:right;">
+		
+		<blockquote class="bottom">
 			"Happines is when you win a race against yourself"
 		</blockquote>
-		<cite>"Vehicle dynamics - theory and applications", ...</cite>
+		<cite class="bottom">"Vehicle dynamics - theory and applications", ...</cite>
 	</div>
 	
 	<div id="webdev" class="page">
