About page: style first paragraph

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<cite>Confucius, Analects, 1.1.1</cite>
 		</blockquote>
 		
-		<p style="clear: both;">
+		<p class="first">
 			Hello, thanks for stopping here. Let me tell you something about me.
 		</p>
 		
