About page: bottom quote

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 		</p>
 		
 		<blockquote class="bottom">
-			"Happines is when you win a race against yourself"
+			<p>
+				"Happines is when you win a race against yourself"
+			</p>
+			<cite>"Vehicle dynamics - theory and applications", ...</cite>
 		</blockquote>
-		<cite class="bottom">"Vehicle dynamics - theory and applications", ...</cite>
 	</div>
 	
 	<div id="webdev" class="page">
