About page: content

--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
 		</blockquote>
 		
 		<p class="first">
-			Hello, thanks for stopping here. Let me tell you something about me.
+			Hello, I'm Giulio, thanks for stopping here. 
 		</p>
 		
-		<p>I like to improve myself.</p>
+		<p>
+			This is my hub page from which it is possible to reach other places on the Net that I frequent.
+			Feel free to have a tour to learn something about my interests.
+		</p>
 		
-		<h3>Location</h3>
-		<p>Currently I live in Petritoli.</p>
-		<iframe width="500" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=Petritoli&amp;sll=41.442726,12.392578&amp;sspn=13.068346,28.256836&amp;ie=UTF8&amp;hq=&amp;hnear=Petritoli+Fermo,+Marche&amp;t=h&amp;ll=43.058353,13.701668&amp;spn=0.062713,0.171318&amp;z=12&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.it/maps?f=q&amp;source=embed&amp;hl=it&amp;geocode=&amp;q=Petritoli&amp;sll=41.442726,12.392578&amp;sspn=13.068346,28.256836&amp;ie=UTF8&amp;hq=&amp;hnear=Petritoli+Fermo,+Marche&amp;t=h&amp;ll=43.058353,13.701668&amp;spn=0.062713,0.171318&amp;z=12&amp;iwloc=A" style="color:#0000FF;text-align:left">Visualizzazione ingrandita della mappa</a></small>
+		<p>
+			It I should say something peculiar to me I would say that I love to 'progressively enhance' me
+			always searching and exploring for beutiful things to feed my brain, heart and soul.
+		</p>
 		
 		<h3><em style="color: #dd0000;">Warning:</em> Bad English Ahead</h3>
 		<p>
