Go on with About and WebDev pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Pieces of Me - mgiulio's Landing Page</title>
+	<title>Pieces of Me - mgiulio's Hub Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" media="screen" type="text/css" href="css/style.css">
 	<!--[if lt IE 9]>
@@ -51,8 +51,8 @@
 		</p>
 		
 		<p>
-			It I should say something peculiar to me I would say that I love to 'progressively enhance' me
-			always searching and exploring for beutiful things to feed my brain, heart and soul.
+			It I should tell only one thing about me I would say that I love to 'progressively enhance' me
+			searching and exploring for beautiful things to feed my brain, heart and soul.
 		</p>
 		
 		<h3><em style="color: #dd0000;">Warning:</em> Bad English Ahead</h3>
@@ -73,67 +73,46 @@
 	
 	<div id="webdev" class="page">
 		<h2>Web Development</h2>
-		<cite class="quote">“Cmputers are useless.  They can only give you answers.”</cite>
-		
+		<cite class="quote">“Computers are useless.  They can only give you answers.”</cite>
 		<p>
-			I am a full-stack all round all hats renaiisance wannabe web developer with a focus to programming who loves to make stuff with Web Standards.
-			Generally my focus is on the client side with a particular emphasis on JavaScript
-		</p>
-		
-		<p style="text-align:center;">
-			<a href="#skills">Skills</a>
-			<a href="#portfolio">Portfolio</a>, because a code snippet is worth 1e4 words
-		<p>
-		
-		<h3 id="skills">Skills</h3>
+		<p>I am an <em>all-round-full-stack</em> web developer with a focus on <em>front end engineering</em> with Web Standard.</p>
+		<h3>Front End</h3>
 		<h4>JavaScript</h4>
-		<p>Deep knowlogde of language.</p>
-		<p>Client side: native, libs: jQuery, YUI</p>
-		<p>Server side: NodeJs, YQL</p>
-		
+		<p>Very good understanding of the core language</p>
+		<p>Client side Js</p>
+		<p>Libraries: jQuery, jQuery UI, YUI 2, YUI 3</p>
+		<h4>Design</h4>
+		<p>Use of graphics software, vector and raster, Gimp, Ik, old Ps.</p>
 		<h4>CSS</h4>
-		<p>Css 2.1,CSS3</p>
-		
+		<p>CSS2.1</p>
+		<p>CSS3</p>
 		<h4>HTML</h4>
-		<p>HTML, HTML5</p>
+		<p>HTML 4</p>
+		<p>HTML 5</p>
+		<h3>In the Middle</h3>
+		<p>Ajax</p>
+		<h3>Back End</h3>
+		<h4>Server side languages</h4>
+		<p>PHP: frameworks:Zend</p>
+		<p>JavaScript</p>
+		<h4>Databases</h4>
+		<p>MySQL</p>
+		<p>Theory</p>
 		
+		<h3>Other Skills</h3>
+		<p>CVS: git, github</p>
+		<p>Wordpress: theme dev, plugins, widgtes.</p>
+		<p>Shells: Cygwin, unix cmds</p>
+		<p>C/C++</p>
+		<p>Web Servers: Apache</p>
+		<p>Java</p>
+		<p>Paradigms: OO, functional</p>
+		<p>OOT: UML, design patterns: MVC
+		
+		<h3 style="text-align:center;">Portfolio(<em>because a code snippet is worth 1e4 words</em>)</h3>
 		<ul>
-			<li>
-				Shells: Cygwin, unix cmds
-			</li>
-			<li>
-				CVS: git, github
-			</li>
-			<li>
-				Wordpress
-			</li>
-			<li>
-				C/C++
-			</li>
-			<li>
-				Db: mysql
-			</li>
-			<li>
-				Web Servers: Apache
-			</li>
-			<li>
-				PHP
-			</li>
-			<li>
-				UML
-			</li>
-			<li>
-				Java
-			</li>
-			<li>
-				Paradigms: OO, functional
-			</li>
-			<li>Gfx sw</li>
-		</ul>
-		<h3 id="portfolio">Portfolio</h3>
-		<ul>
-			<li><a href="#">Mysite</a></li>
-			<li><a href="#">JLF</a></li>
+			<li><a href="#">This site</a></li>
+			<li><a href="#">jQuery Lifestream plugin</a></li>
 		</ul>
 	</div>
 	
