--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
-<html>
+<html class="no-js">
 <head>
 	<title>Pieces of Me - mgiulio's Hub Page</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -15,6 +15,7 @@
    </style>
 	<![endif]-->
 	<link rel="stylesheet" media="screen" type="text/css" href="css/lifestream.css">
+	<script src="js/modernizr.js"></script>
 </head>
 <body>
 	<ul id="navbar">
