--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		} 
    </style>
 	<![endif]-->
-	<link rel="stylesheet" media="screen" type="text/css" href="css/lifestream.css">
 	<script src="js/modernizr.js"></script>
+	<script src=js/jquery.fullpgbgimg.js"></script>
 </head>
 <body>
 	<ul id="navbar">
@@ -126,11 +126,10 @@
 		<p>Feel free to <a href="http://scr.im/mgiulio" target="blank">drop me a line</a>.</p>
 	</div>
 	
-	<!--<script src="js/jquery-1.6.2.min.js"></script>-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-	<!--<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.1.min.js"><\/script>');</script>-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.2.min.js"><\/script>');</script>-->
 	<script src="js/jquery.lifestream.js"></script>
-   <!--<script src="https://raw.github.com/rmm5t/jquery-timeago/master/jquery.timeago.js" type="text/javascript" charset="utf-8"></script>-->
+	<script src="js/jquery.fullpgbgimg.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
