--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	</div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.2.min.js"><\/script>');</script>-->
+	<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.2.min.js"><\/script>');</script>
 	<script src="js/jquery.lifestream.js"></script>
 	<script src="js/jquery.fullpgbgimg.js"></script>
 	<script src="js/script.js"></script>
