--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		} 
    </style>
 	<![endif]-->
+	<link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 	<script src="js/modernizr.js"></script>
 </head>
 <body>
