WebDev page content

--- a/index.html
+++ b/index.html
@@ -76,44 +76,99 @@
 		<h2>Web Development</h2>
 		<cite class="quote">“Computers are useless.  They can only give you answers.”</cite>
 		<p>
-		<p>I am an <em>all-round-full-stack</em> web developer with a focus on <em>front end engineering</em> with Web Standard.</p>
-		<h3>Front End</h3>
-		<h4>JavaScript</h4>
-		<p>Very good understanding of the core language</p>
-		<p>Client side Js</p>
-		<p>Libraries: jQuery, jQuery UI, YUI 2, YUI 3</p>
-		<h4>Design</h4>
-		<p>Use of graphics software, vector and raster, Gimp, Ik, old Ps.</p>
-		<h4>CSS</h4>
-		<p>CSS2.1</p>
-		<p>CSS3</p>
-		<h4>HTML</h4>
-		<p>HTML 4</p>
-		<p>HTML 5</p>
-		<h3>In the Middle</h3>
-		<p>Ajax</p>
-		<h3>Back End</h3>
-		<h4>Server side languages</h4>
-		<p>PHP: frameworks:Zend</p>
-		<p>JavaScript</p>
-		<h4>Databases</h4>
-		<p>MySQL</p>
-		<p>Theory</p>
+			I am an <em>all-round-full-stack</em> web developer with a focus on <em>front end engineering</em> 
+			with Web Standard. <a href="#skills"><em>More</em></a>.
+		</p>
 		
-		<h3>Other Skills</h3>
-		<p>CVS: git, github</p>
-		<p>Wordpress: theme dev, plugins, widgtes.</p>
-		<p>Shells: Cygwin, unix cmds</p>
-		<p>C/C++</p>
-		<p>Web Servers: Apache</p>
-		<p>Java</p>
-		<p>Paradigms: OO, functional</p>
-		<p>OOT: UML, design patterns: MVC
-		
-		<h3 style="text-align:center;">Portfolio(<em>because a code snippet is worth 1e4 words</em>)</h3>
+		<h3 id="portfolio">Portfolio(<em>because a code snippet is worth 1e4 words</em>)</h3>
 		<ul>
-			<li><a href="#">This site</a></li>
+			<li><a href="#">DNDfaves</a></li>
+			<li><a href="#">iPad slideshow</a></li>
 			<li><a href="#">jQuery Lifestream plugin</a></li>
+			<li><a href="#">This site</a></li>
+			<li><a href="#">jQuery fullPgBgImg plugin</a></li>
+		</ul>
+		
+		<h3 id="skills">Skills</h3>
+		<ul>
+			<li>Front End
+				<ul>
+					<li>HTML
+						<ul>
+							<li>HTML 4</li>
+							<li>HTML 5</li>
+						</ul>
+					</li>
+					<li>CSS
+						<ul>
+							<li>CSS 2.1</li>
+							<li>CSS 3</li>
+						</ul>
+					</li>
+					<li>JavaScript
+						<ul>
+							<li>Very good understanding of the core language</li>
+							<li>Libraries and frameworks
+								<ul>
+									<li>jQuery</li>
+									<li>jQuery UI</li>
+									<li>YUI 2</li>
+									<li>YUI 3</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li>Design
+						<ul>
+							<li>Use of graphics software
+								<ul>
+									<li>Gimp</li>
+									<li>Inkscape</li>
+									<li>Ps6</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li>In the Middle
+				<ul>
+					<li>Ajax</li>
+				</ul>
+			</li>
+			<li>Back End
+				<ul>
+					<li>Server side languages
+						<ul>
+							<li>PHP
+								<ul>
+									<li>Frameworks
+										<ul>
+											<li>Zend</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li>JavaScript with Node.js</li>
+						</ul>
+					</li>
+					<li>DBMS(Datebases)
+						<ul>
+							<li>MySQL</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li>Other skills
+				<p>CVS: git, github</p>
+				<p>Wordpress: theme dev, plugins, widgtes.</p>
+				<p>Shells: Cygwin, unix cmds</p>
+				<p>C/C++</p>
+				<p>Web Servers: Apache</p>
+				<p>Java</p>
+				<p>Paradigms: OO, functional</p>
+				<p>OOT: UML, design patterns: MVC
+			</li>
 		</ul>
 	</div>
 	
