Go on with webdev page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<h2>Web Development</h2>
 		<cite class="quote">“Computers are useless.  They can only give you answers.”</cite>
 		<p>
-			I am an <em>all-round-full-stack</em> web developer with a focus on <em>front end engineering</em> 
+			I am a full stack web developer/programmer with a focus on <em>front end engineering</em> 
 			with Web Standard. <a href="#skills"><em>More</em></a>.
 		</p>
 		
@@ -89,7 +89,7 @@
 			<li><a href="#">jQuery fullPgBgImg plugin</a></li>
 		</ul>
 		
-		<h3 id="skills">Skills</h3>
+		<h3 id="skills">Skills List</h3>
 		<ul>
 			<li>Front End
 				<ul>
@@ -105,7 +105,7 @@
 							<li>CSS 3</li>
 						</ul>
 					</li>
-					<li>JavaScript
+					<li><em>JavaScript</em>
 						<ul>
 							<li>Very good understanding of the core language</li>
 							<li>Libraries and frameworks
@@ -160,14 +160,36 @@
 				</ul>
 			</li>
 			<li>Other skills
-				<p>CVS: git, github</p>
-				<p>Wordpress: theme dev, plugins, widgtes.</p>
-				<p>Shells: Cygwin, unix cmds</p>
-				<p>C/C++</p>
-				<p>Web Servers: Apache</p>
-				<p>Java</p>
-				<p>Paradigms: OO, functional</p>
-				<p>OOT: UML, design patterns: MVC
+				<ul>
+					<li>Wordpress development
+						<ul>
+							<li>Themes development</li>
+							<li>Plugins</li>
+							<li>Widgets</li>
+						</ul>
+					</li>
+					<li>Version Control Systems
+						<ul>
+							<li>git and <a href="http://mgiulio.github.com" title="My GitHub account">GitHub</a></li>
+						</ul>
+					</li>
+					<li>Programing languages
+						<ul>
+							<li>C/C++</li>
+							<li>Java</li>
+							<li>Paradigms: OO, functional</li>
+							<li>OOT: UML, design patterns: MVC</li>
+						</ul>
+					</li>
+					<li>Operating systems
+						<ul>
+							<li>Shells: Cygwin, unix cmds</li>
+						</ul>
+					</li>
+					<li>Web Servers: Apache</p>
+					<li>bug hunting</li>
+					<li>Problem solving</li>
+				</ul>
 			</li>
 		</ul>
 	</div>
