--- a/index.html
+++ b/index.html
@@ -73,30 +73,56 @@
 	</div>
 	
 	<div id="webdev" class="page">
-		<h2>Web Development</h2>
-		<cite class="quote">“Computers are useless.  They can only give you answers.”</cite>
+		<h2>
+			Web Development
+			<q>“Computers are useless. They can only give you answers.”</q>,
+			<cite>Picasso</cite>
+		</h2>
+		
 		<p>
 			I am a full stack web developer/programmer with a focus on <em>front end engineering</em> 
 			with Web Standard. <a href="#skills"><em>More</em></a>.
 		</p>
-		<p style="text-align: center">
-			<a href="http://www.w3.org/html/logo/">
-				<img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-graphics-multimedia-performance-semantics-storage.png" width="357" height="64" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
-			</a>
-			<img src="img/jquery-logo.png" alt="jQuery logo" title="jQuery logo">
-		</p>
 		
+		<!--height="64" -->
+		<div id="techno-logos">
+			<p style="text-align: left;">
+				<a href="http://www.w3.org/html/logo/">
+					<img 
+						src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-graphics-multimedia-performance-semantics-storage.png" 
+						width="200" 
+						
+						alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage" 
+						title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage"
+					>
+				</a>
+				<img 
+					src="img/jquery-logo.png" 
+					alt="jQuery logo" 
+					title="jQuery logo"
+					width="200"
+				>
+			</p>
+		<div>
 		
-		<h3 id="portfolio">Portfolio(<em>because a code snippet is worth 1e4 words</em>)</h3>
-		<ul>
-			<li><a href="#">DNDfaves</a></li>
-			<li><a href="#">iPad slideshow</a></li>
-			<li><a href="#">jQuery Lifestream plugin</a></li>
-			<li><a href="#">jQuery Wallpaper plugin</a></li>
-			<li><a href="#">This site</a></li>
-		</ul>
+		<div id="portfolio">  
+			<h3 class="heading">
+				Portfolio
+				<q>“Because a code snippet is worth 1e4 words.”</q>,
+				<cite>mgiulio</cite>
+			</h3>
+			<ul>
+				<li><a href="https://github.com/mgiulio/jquery-lifestream">jQuery Lifestream plugin</a></li>
+				<li><a href="index.html">This site</a></li>
+				<!--
+				<li><a href="#">DNDfaves</a></li>
+				<li><a href="#">iPad slideshow</a></li>
+				<li><a href="#">jQuery Wallpaper plugin</a></li>
+				-->
+			</ul>
+		</div>
 		
-		<div style="text-align:center;">
+		<div style="text-align:center; display: none;">
 			<a href='https://developer.mozilla.org/en/javascript' title='JavaScript'>
 				<img src='http://static.jsconf.us/promotejsh.gif' height='150' width='180' alt='JavaScript'/>
 			</a>
